--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App{
- background-color: black;
+ /* background-color: black; */
 }
 .plist{
   background-color: rgb(12, 166, 255);
@@ -9,6 +9,10 @@
   font-size: small;
   text-align: left;
   
+}
+
+.list:hover{
+  color: white;
 }
 .flex{
   display: flex;
@@ -32,20 +36,62 @@ form{
 }
 .seacrch{
   border: none;
-  background-color: white;
-  color: black;
+  width: 55px;
+  background-color:rgb(12, 166, 255);
+  color: rgb(255, 255, 255);
   padding: 5px;
   border-radius: 10px;
+  margin-top: 10px;
+  border-radius: 10px;
+  font-size: 12px;
 }
 audio{
   display: block;
   margin: auto;
-  background-color: black;
-  border: 1px solid rgb(39, 169, 255);
+  background-color: transparent;
+  color: transparent;
+  width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 h1{
   color:rgb(39, 169, 255) ;
   text-align: center;
+}
+.thumb{
+  width: 30%;
+  display: block;
+  margin: auto;
+  border-radius: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.inputbox{
+  height: 25px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  
+}
+
+@media screen and (max-width:850px) {
+  .thumb{
+    width: 70%;
+    display: block;
+    margin: auto;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  audio{
+    display: block;
+    margin: auto;
+    background-color: transparent;
+    color: transparent;
+    width: 70%;
+   
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
